# TOP-Project

./: .gitignore  CMakeLists.txt  README.md  config.txt  gen_animate_gif_legacy.sh  parallel_gen_animate_gif_legacy.sh  small_config.txt
.github/workflows/: continuous_integration.yml
include/: lbm_comm.h  lbm_config.h  lbm_init.h  lbm_phys.h  lbm_struct.h
perfs/: PERFORMANCE.md
perfs/cumul_subroutines/: plot_overall_execution.gd  timers-cumul-subroutine.txt
perfs/mean_subroutines/: plot_overall_iteration.gd  timers-mean-subroutine.txt
perfs/mesh_sync/: plot_mean_mesh_sync.gd
perfs/meshes_output/: MESHES_OUTPUT.md
perfs/meshes_output/raw/: Gather-e100-n240-knl.txt  Gather-e100-n40-knl.txt  Irecv-e100-n240-knl.txt  Irecv-e100-n40-knl.txt  Recv-e100-n240-knl.txt  Recv-e100-n40-knl.txt  plot_all.gd  plot_n240.gd  plot_n40.gd
perfs/meshes_output/raw/e10/: Gather_timers_e10_n240_knl.txt  Gather_timers_e10_n40_knl.txt  Iunit_timers_e10_n240_knl.txt  Iunit_timers_e10_n40_knl.txt  Sunit_timers_e10_n240_knl.txt  Sunit_timers_e10_n40_knl.txt  plot_e10.gd
perfs/meshes_sync/raw/: plot_all.gd  plot_async_unit.gd  plot_graph_alltoallv.gd  plot_graph_nothread.gd  timers-AsyncUnit-n20.txt  timers-AsyncUnit-n200.txt  timers-Graph-nothread-n20.txt  timers-Graph-nothread-n200.txt  timers-GraphNotWeighted-t1-n100-i30000-o100.txt  timers-GraphWeighted-t1-n100-i30000-o100.txt  timers-mean-MeshSync.txt
src/: CMakeLists.txt  lbm_comm.c  lbm_config.c  lbm_init.c  lbm_phys.c  lbm_struct.c
